reduce build warnings, fix encoding problem

--- a/release/product/common/releasenotes-4.0.htm
+++ b/release/product/common/releasenotes-4.0.htm
@@ -57,7 +57,7 @@
 
   <H3>Для разработчиков</H3>
     <BLOCKQUOTE>
-    	<P>Раширено API объекта com.mg.merp.retail.InvoiceHeadServiceLocal, метод void applyDiscount(DocHead docHead, List<DocSpec> specs, ApplyDiscountListener аpplyDiscountListener).</P>
+    	<P>Раширено API объекта com.mg.merp.retail.InvoiceHeadServiceLocal, метод void applyDiscount(DocHead docHead, List<DocSpec> specs, ApplyDiscountListener applyDiscountListener).</P>
     	<P>Раширено API объекта com.mg.framework.api.ui.widget.Tree, метод void setSelectionRow(int row).</P>
     	<P>Раширено API объекта com.mg.framework.api.ApplicationServer, метод void invalidateUserSessions(String[] sessionIds).</P>
     	<P>Раширено API объекта com.mg.framework.api.ui.SearchHelpForm, методы void setTargetEntity(PersistentObject entity),
